add and take endpoints working!

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CodeQuiz",
+  "name": "codetogo",
   "jest": {
     "collectCoverage" : true,
     "collectCoverageFrom" : ["**/*.{js,jsx}", "!**/node_modules/**"]
