--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "codetogo",
   "jest": {
-    "collectCoverage" : true,
-    "collectCoverageFrom" : ["**/*.{js,jsx}", "!**/node_modules/**"]
-  },  
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "**/*.{js,jsx}",
+      "!**/node_modules/**"
+    ]
+  },
   "version": "0.1.0",
   "description": "Like Code Wars, but more mobile-friendly and multiple choice.",
   "private": true,
@@ -15,6 +18,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
     "redux": "^3.7.2",
     "redux-form": "^7.1.1",
