--- a/package.json
+++ b/package.json
@@ -1,12 +1,5 @@
 {
   "name": "codetogo",
-  "jest": {
-    "collectCoverage": true,
-    "collectCoverageFrom": [
-      "**/*.{js,jsx}",
-      "!**/node_modules/**"
-    ]
-  },
   "version": "0.1.0",
   "description": "Like Code Wars, but more mobile-friendly and multiple choice.",
   "private": true,
@@ -28,12 +21,16 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest -u --coverage",
+    "test": "react-scripts test --env=jsdom --coverage",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.2",
-    "react-test-renderer": "^16.0.0"
+    "react-test-renderer": "^16.2.0",
+    "redux-mock-store": "^1.5.1",
+    "sinon": "^4.3.0"
   }
 }
